--- a/index.html
+++ b/index.html
@@ -60,21 +60,52 @@
       <!-- Additional required wrapper -->
       <div class="swiper-wrapper">
         <!-- Slides -->
-        <div class="swiper-slide"><img src="img/Apachekafka.svg"
-            alt="Livro sobre apache kafka e spring boot da alura books"></div>
-        <div class="swiper-slide"><img src="img/Liderança.svg"
-            alt="Livro sobre liderança em design design da alura books"></div>
-        <div class="swiper-slide"><img src="img/Javascript.svg" alt="Livro sobre javascript assertivo da alura books">
+        <div class="swiper-slide"><img src="obra1.jpg"
+            alt=""></div>
+        <div class="swiper-slide"><img src="obra2.jpg"
+            alt=""></div>
+        <div class="swiper-slide"><img src="obra3.jpg" alt="">
         </div>
         <div class="swiper-slide">
-          <img src="img/Guia Front-end.svg" alt="Livro Guia front end" />
+          <img src="obra4.jpg" alt="" />
         </div>
         <div class="swiper-slide">
-          <img src="img/Portugol.svg" alt="Livro sobre portugol" />
+          <img src="obra5.jpg" alt="" />
         </div>
         <div class="swiper-slide">
-          <img src="img/Acessibilidade.svg" alt="Livro sobre acessibilidade" />
+          <img src="obra6.jpg" alt="" />
         </div>
+        <div class="swiper-slide">
+          <img src="obra7.jpg" alt="" />
+        </div>
+        <div class="swiper-slide">
+          <img src="obra8.jpg" alt="" />
+        </div>
+        <div class="swiper-slide">
+          <img src="obra9.jpg" alt="" />
+        </div>
+        <div class="swiper-slide">
+          <img src="obra10.jpeg" alt="" />
+        </div>
+         <div class="swiper-slide">
+          <img src="obra11.jpeg" alt="" />
+        </div>
+         <div class="swiper-slide">
+          <img src="obra12.jpeg" alt="" />
+        </div>
+         <div class="swiper-slide">
+          <img src="obra13.jpeg" alt="" />
+        </div>
+         <div class="swiper-slide">
+          <img src="obra14.jpeg" alt="" />
+        </div>
+         <div class="swiper-slide">
+          <img src="obra15.jpeg" alt="" />
+        </div>
+         <div class="swiper-slide">
+          <img src="obra16.jpeg" alt="" />
+        </div>
+        
       </div>
 
       <!-- If we need navigation buttons -->
@@ -118,17 +149,34 @@
 
       <div class="swiper-wrapper">
         <!-- Slides -->
-        <div class="swiper-slide"><img src="img/ApacheKafka.svg"
-            alt="Livro sobre apache kafka e spring boot da alura books"></div>
-        <div class="swiper-slide"><img src="img/Liderança.svg" alt="Livro sobre liderança em design da alura books">
+         <div class="swiper-slide">
+          <img src="obra17.jpeg" alt="" />
         </div>
-        <div class="swiper-slide"><img src="img/Javascript.svg" alt="Livro sobre javascript assertivo da alurabooks">
+         <div class="swiper-slide">
+          <img src="obra18.jpeg" alt="" />
         </div>
-        <div class="swiper-slide"><img src="img/Guia Front-end.svg" alt="Livro Guia front end"></div>
-        <div class="swiper-slide"><img src="img/Portugol.svg" alt="Livro sobre portugol"></div>
-        <div class="swiper-slide"><img src="img/Acessibilidade.svg" alt="livro sobre acessibilidade"></div>
-      </div>
-
+         <div class="swiper-slide">
+          <img src="obra19.jpeg" alt="" />
+        </div>
+         <div class="swiper-slide">
+          <img src="obra20.jpeg" alt="" />
+        </div>
+         <div class="swiper-slide">
+          <img src="obra21.jpeg" alt="" />
+        </div>
+         <div class="swiper-slide">
+          <img src="obra22.jpeg" alt="" />
+        </div>
+         <div class="swiper-slide">
+          <img src="obra23.jpeg" alt="" />
+        </div>
+         <div class="swiper-slide">
+          <img src="obra24.jpeg" alt="" />
+        </div>
+         <div class="swiper-slide">
+          <img src="obra25.jpeg" alt="" />
+        </div>
+       </div> 
       <!-- If we need navigation buttons -->
       <div class="swiper-button-prev"></div>
       <div class="swiper-button-next"></div>
@@ -139,16 +187,7 @@
       <div class="card__descrição">
         <!-- 1º coluna -->
         <div class="descrição">
-          <img src="img/Estrelinhas.svg" alt="Avaliação 5 estrelas">
-          <h3 class="descrição__titulo">Autora do Mês</h3>
-          <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
-          <p class="descrição__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.
-          </p>
-        </div>
-        <!-- 2º coluna -->
-        <img src="img/Escritora.svg" class="descrição__imagem">
-      </div>
-
+          <img src="img/Estrelinhas.svg" alt="Avaliação 5 estrelas"
       <!-- 2º linha -->
       <div class="card__botões">
         <!-- 1º coluna -->
